--- a/assets/index.html
+++ b/assets/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <base href="/">
-  <title>pptt</title>
+  <title>phtt</title>
 </head>
 <body>
   <div id="phtt-app"></div>
